EditComboField: ensure text is left aligned and set margin between label and input

--- a/components/style/EditComboField.css
+++ b/components/style/EditComboField.css
@@ -4,4 +4,9 @@ div.edit-multi-select {
     background-color: var(--input-bg-color);
     max-height: 5em;
     overflow-y: auto;
+    text-align: left;
+}
+
+div.edit-multi-select label > input {
+    margin-right: 0.25em;
 }
